--- a/main.html
+++ b/main.html
@@ -8,6 +8,29 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="container">
+        <h1>My Playlist</h1>
+        <div class="playlist">
+            <ul>
+                <li><a href="" target="_blank">Song 1</a></li>
+                <li><a href="" target="_blank">Song 2</a></li>
+                <li><a href="" target="_blank">Song 3</a></li>
+                <li><a href="" target="_blank">Song 4</a></li>
+                <li><a href="" target="_blank">Song 5</a></li>
+            </ul>
+        </div>
+        <h2>Now Playing...</h2>
+        <div class="v_player">
+            <video class="player_one" src="https://www.w3schools.com/tags/movie.mp4" controls>
+                <source src="https://www.w3schools.com/tags/movie.mp4" type="video/mp4">
+            </video>
+            <h2>MP3 songs</h2>
+            <p>Maan Meri Jaan</p>
+            <audio class="player_two" src="https://www.pagalworld.com.se/files/download/id/64630" controls>
+                <source src="https://www.pagalworld.com.se/files/download/id/64630" type="audio">
+            </audio>
+        </div>
+    </div>
     <script type="text/javascript" src="./script.js">
 </script>
 
